# henry-ai

./: .gitignore  BUILD-DESKTOP.md  BUILD-IN-PROGRESS.md  COMPLETE-PROJECT-STATUS.md  CRITICAL-FIXES-SUMMARY.md  DESKTOP-BUILD-CRITIQUE.md  DESKTOP-BUILD-FINAL-STATUS.md  DESKTOP-VERSION-SUMMARY.md  FINAL-STATUS-SUMMARY.md  FINAL-SUMMARY-AND-NEXT-STEPS.md  HENRY-VERSIONS-PLAN.md  QUICKSTART.md  README.md  START-HENRY-ULTIMATE.md  TRANSFORMATION-COMPLETE.md  build-desktop.sh  data  desktop-build-todo.md  restart-all.sh  start-all.sh  status.sh  stop-all.sh  todo.md
.github/workflows/: build-release.yml
apps/api/: .gitignore  .helpers.extend.js  .helpers.new  .write_caps.new  ecosystem.bad.1759173092.cjs  ecosystem.bak.1759173363.cjs  ecosystem.config.cjs  ecosystem.config.cjs.bak.1759173453  ecosystem.config.cjs.bak.1759194300  fix-server.py  package-lock.json  package.json  package.json.bak.1759099127  server-autonomous.mjs  server-enhanced.mjs  server-ultimate.mjs  server.bak.1759072463  server.js.bak.1758998632  server.js.bak.1759001176  server.js.bak.1759001336  server.js.bak.1759007538  server.js.bak.1759009603  server.js.bak.1759010247  server.mjs  server.mjs.bak.1759077691  (+14 more)
apps/web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
desktop-app/: build-all-platforms.sh  index.html  main.js  package-lock.json  package.json  preload.js
installers/: HenryAI-Android.apk  HenryAI-Linux.AppImage  HenryAI-iOS.ipa  HenryAI-macOS.dmg
mobile-app/: App.js  app.json  package.json
(+71 files in other folders)
