[package]
name = "henry-ai"
version = "1.0.0"
description = "Henry AI - Your Local AI Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "henry_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "fs-all", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

